--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <button class="btn btn-danger ms-3" type="button" onclick="api()">খুজো</button>
 
 </div>
-    <div id="container" class="justify-content-center container d-flex flex-wrap">
+    <div id="container" class="justify-content-between container d-flex flex-wrap">
 
     </div>
     
