--- a/index.html
+++ b/index.html
@@ -33,9 +33,12 @@
         </div>
     </nav>
 <div class="d-flex flex-wrap justify-content-center my-3">
+    <div class="m-1">
     <input id="search" type="text" placeholder="কি চান?">
     <input id="limit" class="ms-3" type="text" placeholder="কতগুলো চান?"> 
-    <button class="btn btn-danger ms-3" type="button" onclick="api()">খুজো</button>
+    </div>
+    <div> <button class="btn btn-danger ms-2" type="button" onclick="api()">খুজো</button> </div>
+    
 
 </div>
     <div id="container" class="justify-content-between container d-flex flex-wrap">
