--- a/index.html
+++ b/index.html
@@ -33,17 +33,17 @@
         </div>
     </nav>
 <div class="d-flex flex-wrap justify-content-center my-3">
+    <center>
     <div class="m-1">
     <input id="search" type="text" placeholder="কি চান?">
-    <input id="limit" class="ms-3" type="text" placeholder="কতগুলো চান?"> 
+    <input id="limit" class="ms-auto" type="text" placeholder="কতগুলো চান?"> 
     </div>
-    <div> <button class="btn btn-danger ms-2" type="button" onclick="api()">খুজো</button> </div>
-    
+    <div class="mt-auto"> <button class="btn btn-danger ms-2 justify-content-center" type="button" onclick="api()">খুজো</button> </div>
+    </center>
+</div>
+<div id="container" class="justify-content-between container d-flex flex-wrap">
 
 </div>
-    <div id="container" class="justify-content-between container d-flex flex-wrap">
-
-    </div>
     
 
     <script src="meal.js">
