--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
     <center>
     <div class="m-1">
     <input id="search" type="text" placeholder="কি চান?">
-    <input id="limit" class="ms-auto" type="text" placeholder="কতগুলো চান?"> 
+    <input id="limit" class="ms-auto mt-auto" type="text" placeholder="কতগুলো চান?"> 
     </div>
-    <div class="mt-auto"> <button class="btn btn-danger ms-2 justify-content-center" type="button" onclick="api()">খুজো</button> </div>
+    <div class="mt-auto"> <button class="btn btn-danger justify-content-center" type="button" onclick="api()">খুজো</button> </div>
     </center>
 </div>
-<div id="container" class="justify-content-between container d-flex flex-wrap">
+<div id="container" class="justify-content-around container d-flex flex-wrap">
 
 </div>
     
