--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>খদ্দো বাংলা</title>
+    <title>  খাদ্য বাংলা</title>
     <link rel="stylesheet" href="meal.css">
     <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
@@ -11,7 +11,7 @@
 <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-danger">
         <div class="container-fluid">
-            <a class="navbar-brand mb-0 h1" href="#"><b>খদ্দো বাংলা</b></a>
+            <a class="navbar-brand mb-0 h1" href="#"><b>খাদ্য বাংলা</b></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
